Create Locators wrapper (#98)
refactor: created a wrapper around a Map of Locators

Closes: #97